# pypackage

./: README.md  cookiecutter.json
hooks/: post_gen_project.py
{{cookiecutter.pkg_name}}/: .dockerignore  .gitignore  Dockerfile  README.md  mise.toml  pyproject.toml
{{cookiecutter.pkg_name}}/.devcontainer/: devcontainer.json
{{cookiecutter.pkg_name}}/src/{{cookiecutter.pkg_dir}}/: __init__.py  __main__.py
